Updated chef_workstation - walkull buil.
Squashed commit of the following:

commit e266ced4c0ad3ad3de40f723cb149b839f82dc98
Author: Ubuntu <ubuntu@ip-10-202-62-65.ec2.internal>
Date:   Wed Oct 26 17:12:18 2011 +0000

    fix chef_workstation receipe

commit ba0dd9596b309dbe63c10be1c9716200576c9aa0
Author: Ubuntu <ubuntu@ip-10-202-62-65.ec2.internal>
Date:   Thu Oct 6 20:03:20 2011 +0000

    remove old app_fisn

--- a/chef_workstation/templates/default/bashrc.erb
+++ b/chef_workstation/templates/default/bashrc.erb
@@ -110,6 +110,17 @@ PATH=".:$HOME/bin:$PATH"
 
 EDITOR=emacs
 export EDITOR
+
+cookbooks=$HOME/cookbooks
+export cookbooks
+
+repo=$HOME/chef-repo  
+export repo
+bags=$HOME/chef-repo/data_bags  
+export bags
+roles=$HOME/chef-repo/roles
+export roles
+
 nori="--no-ri --no-rdoc"
 alias purge='rm *~'
 alias h='history 10'
